trunk/Archive2/cf/c2618eea22b9fc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:23:1: error: expected ';' after struct definition
 }
 ^
